# NEXUS-AI-TRADING-SYSTEM

./: .dockerignore  .editorconfig  .env  .env.example  .env.production  .eslintrc.json  .prettierignore  .prettierrc  .replit  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NEXUS AI TRADING.txt  README.md  ROADMAP.md  SECURITY.md  bootstrap.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init_project.sh  install.sh  package.json  pnpm-workspace.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  start.sh  start_nexus.sh  stop.sh  stop_nexus.sh  turbo.json
.github/: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ai/: __init__.py
ai/agents/: NEXUS  __init__.py  agent_registry.py  arbitrage_agent.py  base_agent.py  collaboration_manager.py  market_making_agent.py  mean_reversion_agent.py  momentum_agent.py  risk_agent.py  sentiment_agent.py
ai/backtesting/: __init__.py  backtest_engine.py  data_provider.py  metrics_calculator.py  monte_carlo.py  optimizer.py  report_generator.py  results_analyzer.py  strategy_runner.py  walk_forward.py
ai/checkpoints/: NEXUS  __init__.py  checkpoint_manager.py  model_saver.py  version_tracker.py
ai/cognition/: __init__.py  decision_maker.py  knowledge_base.py  learning_loop.py  memory.py  reasoning_engine.py
ai/datasets/: __init__.py  augmentation.py  data_loader.py  data_preprocessor.py  dataset_builder.py  feature_engineering.py  time_series_split.py
ai/distributed-learning/: NEXUS  __init__.py  federated_learning.py  gradient_aggregator.py  parameter_server.py  sync_manager.py  worker.py
ai/experiments/: __init__.py  ablation_study.py  experiment_tracker.py  hyperparameter_optimizer.py  nexus.os  results_comparator.py
ai/memory/: __init__.py  episodic_memory.py  long_term_memory.py  memory_manager.py  short_term_memory.py  vector_store.py
ai/models/: __init__.py  base_model.py
ai/neural/: __init__.py
ai/notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  04_backtesting.ipynb  05_hyperparameter_tuning.ipynb  06_model_evaluation.ipynb  __init__.py
ai/optimization/: __init__.py  bayesian_optimization.py  genetic_algorithm.py  grid_search.py  hyperopt.py  optuna_optimizer.py
ai/prediction/: __init__.py  ensemble_predictor.py  market_prediction.py  prediction_cache.py  prediction_pipeline.py  price_prediction.py  sentiment_prediction.py  trend_prediction.py  volatility_prediction.py
ai/reasoning/: __init__.py  inference_engine.py  logic_engine.py  probabilistic_reasoning.py  rule_based_system.py
ai/reinforcement/: __init__.py
ai/self-learning/: __init__.py  adaptive_learning.py  concept_drift_detector.py  incremental_learner.py  model_updater.py  online_learner.py
ai/simulation/: __init__.py  broker_simulator.py  market_simulator.py  nexus.os  order_book_simulator.py  scenario_generator.py
ai/strategies/: NEXUS  __init__.py  base_strategy.py
ai/vector-db/: NEXUS  __init__.py  chroma_client.py  embeddings_generator.py  pinecone_client.py  similarity_search.py  vector_index.py  weaviate_client.py
backend/tasks/: ...
blockchain/bridges/: arbitrum_bridge.py  avalanche_bridge.py  base_bridge.py  binance_bridge.py  bridge_analytics.py  bridge_config.py  bridge_events.py  bridge_fees.py  bridge_manager.py  bridge_monitor.py  bridge_security.py  bridge_transaction.py  bridge_validator.py  cross_chain_swap.py  ethereum_bridge.py  optimism_bridge.py  polygon_bridge.py  solana_bridge.py
blockchain/defi/: __init__.py  aave.py  base_protocol.py  borrowing.py  compound.py  curve.py  defi_aggregator.py  defi_analytics.py  defi_config.py  defi_manager.py  defi_risk.py  flash_loan.py  lending.py  lido.py  liquidity_pool.py  maker_dao.py  pancake_swap.py  staking.py  uniswap.py  yield_farming.py
blockchain/nft/: __init__.py  base_nft.py  blur.py  erc1155.py  erc721.py  looksrare.py  nft_analytics.py  nft_collection.py  nft_config.py  nft_lending.py  nft_manager.py  nft_marketplace.py  nft_metadata.py  nft_rarity.py  nft_staking.py  nft_trading.py  nft_valuation.py  nft_whale.py  opensea.py
blockchain/nodes/: __init__.py  base_node.py  bsc_node.py  eth_node.py  node_backup.py  node_cache.py  node_config.py  node_health.py  node_manager.py  node_metrics.py  node_monitor.py  node_peers.py  node_recovery.py  node_rpc.py  node_sync.py  node_websocket.py  polygon_node.py  solana_node.py
blockchain/onchain-analysis/: __init__.py  analysis_config.py  base_analyzer.py  defi_analyzer.py  exchange_flow.py  gas_analyzer.py  holder_analyzer.py  mempool_analyzer.py  nft_analyzer.py  onchain_alerts.py  onchain_analyzer.py  onchain_metrics.py  onchain_signals.py  smart_money.py  token_analyzer.py  volume_analyzer.py  whale_tracker.py
blockchain/smart-contracts/: __init__.py  aave_contract.py  base_contract.py  compound_contract.py  contract_abi.py  contract_audit.py  contract_bytecode.py  contract_compiler.py  contract_config.py  contract_deployer.py  contract_interceptor.py  contract_manager.py  contract_upgrade.py  contract_verifier.py  erc1155_contract.py  erc20_contract.py  erc721_contract.py  pancake_contract.py  uniswap_contract.py
blockchain/staking/: __init__.py  atom_staking.py  base_staking.py  bnb_staking.py  dot_staking.py  eth_staking.py  liquid_staking.py  sol_staking.py  staking_analytics.py  staking_apy.py  staking_config.py  staking_manager.py  staking_pool.py  staking_rewards.py  staking_risk.py  staking_validator.py
blockchain/wallets/: __init__.py  base_wallet.py  bsc_wallet.py  ethereum_wallet.py  multi_chain_wallet.py  polygon_wallet.py  solana_wallet.py  tron_wallet.py  wallet_analytics.py  wallet_backup.py  wallet_balance.py  wallet_config.py  wallet_hd.py  wallet_history.py  wallet_manager.py  wallet_monitor.py  wallet_security.py  wallet_signer.py  wallet_transaction.py
blockchain/web3/: alchemy_client.py  base_web3.py
docs/operations/: logging.md
tests/performance/: __init__.py
trading/analytics/: backtest_analyzer.py  market_analyzer.py  metrics_calculator.py  (+3 more)
(+1001 files in other folders)
