# ============================================
# NEXUS AI TRADING SYSTEM
# Copyright © 2026 NEXUS QUANTUM LTD
# CEO: Dr X... - Majority Shareholder
# ============================================
# pyproject.toml - Configuration Python
# ============================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================
# PROJECT METADATA
# ============================================
[project]
name = "nexus-ai-trading-system"
version = "1.0.0"
description = "Plateforme IA de trading algorithmique universelle, autonome, modulaire et professionnelle"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Commercial"}
authors = [
    {name = "NEXUS QUANTUM LTD", email = "contact@nexusquantum.com"}
]
maintainers = [
    {name = "NEXUS QUANTUM LTD", email = "contact@nexusquantum.com"}
]
keywords = [
    "nexus",
    "ai",
    "trading",
    "algorithmic-trading",
    "machine-learning",
    "deep-learning",
    "cryptocurrency",
    "stocks",
    "forex",
    "quant",
    "finance",
    "fastapi",
    "trading-system"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {
    "Homepage" = "https://nexustradingia.com",
    "Documentation" = "https://docs.nexustradingia.com",
    "Repository" = "https://github.com/NEXUS-QUANTUM/NEXUS-AI-TRADING-SYSTEM",
    "Issues" = "https://github.com/NEXUS-QUANTUM/NEXUS-AI-TRADING-SYSTEM/issues",
    "Changelog" = "https://github.com/NEXUS-QUANTUM/NEXUS-AI-TRADING-SYSTEM/blob/main/CHANGELOG.md",
}

# ============================================
# DEPENDENCIES
# ============================================
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "orjson>=3.10.0",
    
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    
    # Database
    "sqlalchemy>=2.0.37",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "motor>=3.6.0",
    "pymongo>=4.10.0",
    
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "authlib>=1.4.0",
    
    # HTTP Client
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "requests>=2.32.0",
    
    # WebSocket
    "websockets>=14.0",
    
    # Task Queue
    "celery>=5.4.0",
    "flower>=2.0.0",
    
    # Data Processing
    "pandas>=2.2.0",
    "numpy>=2.2.0",
    "polars>=1.19.0",
    "scipy>=1.14.0",
    
    # Technical Analysis
    "ta-lib>=0.4.28",
    "ta>=0.10.0",
    "pandas-ta>=0.3.14",
    
    # Machine Learning
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "catboost>=1.2.0",
    
    # Deep Learning
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0",
    
    # NLP
    "transformers>=4.48.0",
    "datasets>=3.2.0",
    "sentence-transformers>=3.4.0",
    "huggingface-hub>=0.27.0",
    
    # RL
    "stable-baselines3>=2.4.0",
    "gymnasium>=1.0.0",
    
    # Agent Framework
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "openai>=1.60.0",
    
    # Trading
    "ccxt>=4.4.0",
    "python-binance>=1.0.19",
    "alpaca-trade-api>=3.0.0",
    "oandapyV20>=3.0.4",
    "ib_insync>=0.9.86",
    "yfinance>=0.2.47",
    
    # Optimization
    "optuna>=4.1.0",
    "hyperopt>=0.2.7",
    
    # Visualization
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "plotly>=5.24.0",
    
    # Monitoring
    "prometheus-client>=0.21.0",
    "sentry-sdk>=2.19.0",
    
    # Email
    "sendgrid>=6.11.0",
    "jinja2>=3.1.0",
    
    # Utils
    "loguru>=0.7.0",
    "tenacity>=9.0.0",
    "click>=8.1.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "tqdm>=4.67.0",
    "schedule>=1.2.0",
    "python-crontab>=3.2.0",
]

# ============================================
# OPTIONAL DEPENDENCIES
# ============================================
[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.0",
    "pytest-mock>=3.14.0",
    "pytest-env>=1.1.0",
    "pytest-dotenv>=0.5.2",
    "black>=24.10.0",
    "isort>=5.13.0",
    "flake8>=7.1.0",
    "mypy>=1.14.0",
    "ruff>=0.9.0",
    "bandit>=1.8.0",
    "safety>=3.2.0",
    "pre-commit>=4.0.0",
    "tox>=4.23.0",
    "coverage>=7.6.0",
    "hypothesis>=6.122.0",
    "faker>=33.1.0",
    "factory-boy>=3.3.0",
    "responses>=0.25.0",
    "freezegun>=1.5.0",
    "vcrpy>=6.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-profiling>=1.7.0",
    "pytest-randomly>=3.15.0",
    "pytest-repeat>=0.9.3",
    "pytest-xprocess>=0.23.0",
    "pytest-socket>=0.7.0",
    "pytest-httpx>=0.34.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocstrings>=0.27.0",
    "mkdocstrings-python>=1.13.0",
    "markdown-include>=0.8.0",
    "pymdown-extensions>=10.12.0",
    "plantuml-markdown>=3.10.0",
    "mermaid2>=1.0.0",
]
ai = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0",
    "transformers>=4.48.0",
    "datasets>=3.2.0",
    "sentence-transformers>=3.4.0",
    "huggingface-hub>=0.27.0",
    "stable-baselines3>=2.4.0",
    "gymnasium>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "openai>=1.60.0",
    "optuna>=4.1.0",
    "hyperopt>=0.2.7",
    "onnx>=1.16.0",
    "onnxruntime>=1.20.0",
]
trading = [
    "ccxt>=4.4.0",
    "python-binance>=1.0.19",
    "alpaca-trade-api>=3.0.0",
    "oandapyV20>=3.0.4",
    "ib_insync>=0.9.86",
    "yfinance>=0.2.47",
    "ta-lib>=0.4.28",
    "ta>=0.10.0",
    "pandas-ta>=0.3.14",
]
monitoring = [
    "prometheus-client>=0.21.0",
    "sentry-sdk>=2.19.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-exporter-prometheus>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.0",
    "pytest-mock>=3.14.0",
    "pytest-env>=1.1.0",
    "pytest-dotenv>=0.5.2",
]
all = [
    "nexus-ai-trading-system[dev]",
    "nexus-ai-trading-system[docs]",
    "nexus-ai-trading-system[ai]",
    "nexus-ai-trading-system[trading]",
    "nexus-ai-trading-system[monitoring]",
    "nexus-ai-trading-system[test]",
]

# ============================================
# PROJECT SCRIPTS
# ============================================
[project.scripts]
nexus = "nexus.cli:main"
nexus-api = "uvicorn backend.main:app --host 0.0.0.0 --port 8000"
nexus-dev = "uvicorn backend.main:app --reload --host 0.0.0.0 --port 8000"
nexus-test = "pytest"
nexus-test-cov = "pytest --cov=backend --cov-report=html"
nexus-lint = "ruff check . && black --check . && mypy ."
nexus-format = "black . && isort . && ruff check --fix ."
nexus-migrate = "alembic upgrade head"
nexus-migrate-make = "alembic revision --autogenerate"
nexus-seed = "python backend/database/seeders/main_seeder.py"
nexus-backtest = "python trading/backtesting/backtest_engine.py"
nexus-train = "python ai/training/trainer.py"
nexus-predict = "python ai/prediction/predictor.py"

# ============================================
# TOOL CONFIGURATIONS
# ============================================
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  | env
  | node_modules
  | \.next
)/
'''
extend-exclude = '''
/(
    alembic
  | migrations
  | tests
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["nexus", "backend", "ai", "trading", "shared"]
known_third_party = [
    "fastapi",
    "sqlalchemy",
    "alembic",
    "psycopg2",
    "asyncpg",
    "redis",
    "motor",
    "pymongo",
    "pydantic",
    "uvicorn",
    "celery",
    "pandas",
    "numpy",
    "polars",
    "scipy",
    "sklearn",
    "xgboost",
    "lightgbm",
    "catboost",
    "torch",
    "transformers",
    "langchain",
    "openai",
    "ccxt",
    "yfinance",
    "prometheus_client",
    "sentry_sdk",
]
skip_gitignore = true
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "venv",
    "env",
    "node_modules",
    "build",
    "dist",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "alembic",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # Pyflakes, pycodestyle
    "I",  # isort
    "N",  # pep8-naming
    "D",  # pydocstyle
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "RUF",  # Ruff-specific
    "S",  # flake8-bandit
    "A",  # flake8-builtins
    "ARG",  # flake8-unused-arguments
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "TID",  # flake8-tidy-imports
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "D212",  # Multi-line docstring summary should start at the first line
    "S101",  # Use of assert
    "S301",  # Use of pickle
    "S303",  # Use of md5
    "S311",  # Use of random
    "S324",  # Use of hashlib
    "S404",  # Use of subprocess
    "S602",  # Use of exec
    "S607",  # Use of startswith with path
    "S701",  # Use of jinja2 with autoescape
    "S702",  # Use of mako
    "B008",  # Do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "D",
    "S",
    "B",
    "ARG",
]
"backend/database/migrations/**/*" = [
    "D",
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "S",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
ignore_missing_imports = true
exclude = [
    "alembic",
    "migrations",
    "tests",
    "venv",
    "env",
    "node_modules",
    "build",
    "dist",
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers -p no:cacheprovider --tb=short"
testpaths = [
    "tests",
    "backend/tests",
    "ai/tests",
    "trading/tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "performance: Performance tests",
    "slow: Slow tests",
    "fast: Fast tests",
    "smoke: Smoke tests",
    "regression: Regression tests",
    "security: Security tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
timeout = 300

[tool.coverage.run]
source = ["backend", "ai", "trading", "shared"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/node_modules/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 80

[tool.alembic]
script_location = "backend/database/migrations"
prepend_sys_path = "."
version_path_separator = "os"
sqlalchemy.url = "postgresql://nexus:nexus123@localhost:5432/nexus_ai"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
bump_message = "chore(release): bump version to $current_version -> $new_version"
version_files = [
    "pyproject.toml:version",
    "package.json:version",
]

[tool.semantic_release]
version_variable = "pyproject.toml:version"
commit_parser = "conventional"
changelog_merge_prerelease = true
branches = {
    "main": {"match": "main"},
    "develop": {"match": "develop"},
}

[tool.typos]
files = ["*.py", "*.md", "*.txt", "*.yaml", "*.yml", "*.json", "*.toml"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "env",
    "node_modules",
    "build",
    "dist",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "alembic",
    "migrations",
]

[tool.bandit]
exclude_dirs = ["tests", "alembic", "migrations", "venv", "env"]
skips = ["B101", "B311", "B303", "B324", "B404", "B602", "B607", "B701", "B702"]
severity = "medium"
confidence = "medium"

[tool.safety]
ignore = [
    "12345",  # Example ignore
]
security = true
full_report = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.tbump]
current_version = "1.0.0"
files = [
    "pyproject.toml:version",
    "package.json:version",
]
